--- a/wp-content/themes/Newspaper-child/style.css
+++ b/wp-content/themes/Newspaper-child/style.css
@@ -1166,3 +1166,37 @@ display: none;
     padding-right: 3px;
     padding-bottom: 3px;
 }
+
+/***** Floating share button in detail view *****/
+.sumome-share-client-wrapper div.sumome-share-client.sumome-share-client-left-page {
+    margin-left: 5px;
+}
+
+.sumome-share-client-wrapper div.sumome-share-client .sumome-share-client-share {
+    margin-bottom: 5px !important;
+}
+
+.sumome-share-client-wrapper div.sumome-share-client .sumome-share-client-share.sumome-share-client-share-share {
+    margin-bottom: 20px !important;
+}
+
+.sumome-share-client-wrapper div.sumome-share-client .sumome-share-client-share.sumome-share-client-share-share::after {
+    width: 0;
+    height: 0;
+    border-left: 25px solid transparent;
+    border-right: 25px solid transparent;
+    border-top: 15px solid #FD6F0B;
+    content: "";
+    position: absolute;
+    top: 50px;
+    left: 0;
+}
+
+.td-post-content .wpfp-span {
+    margin-top: 120px !important;
+    margin-left: 10px !important;
+}
+
+.td-post-content img {
+    margin-bottom: 0;
+}
